# cpp-Game-of-life

./: .gitignore  CMakeLists.txt  README.md  config.yaml
inc/: Cell.h  Field.h  Game.h
src/: Cell.cpp  Field.cpp  Game.cpp  main.cpp
